# DeFoG

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yaml  pixi.toml  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
configs/dataset/: guacamol.yaml  moses.yaml  qm9.yaml  tls.yaml  tree.yaml  zinc.yaml
configs/experiment/: comm20.yaml  debug.yaml  guacamol.yaml  moses.yaml  planar.yaml  qm9_no_h.yaml  qm9_with_h.yaml  sbm.yaml  tls.yaml  tree.yaml  zinc.yaml
configs/general/: general_default.yaml
configs/model/: discrete.yaml
configs/sample/: sample_default.yaml
configs/train/: train_default.yaml
docker/: entrypoint.sh
docker/dependencies/: apt-runtime.txt  environment.yaml  pip_no_deps.sh
images/: visualize_traj.ipynb
src/: graph_discrete_flow_model.py  main.py  utils.py
src/analysis/: dist_helper.py  rdkit_functions.py  spectre_utils.py  visualization.py
src/datasets/: abstract_dataset.py  dataset_utils.py  guacamol_dataset.py  moses_dataset.py  qm9_dataset.py  spectre_dataset.py  tls_dataset.py  tu_dataset.py  tu_dataset_origin.py  zinc_dataset.py
src/flow_matching/: flow_matching_utils.py  noise_distribution.py  rate_matrix.py  time_distorter.py  utils.py
src/metrics/: abstract_metrics.py  molecular_metrics.py  molecular_metrics_discrete.py  tls_metrics.py  train_metrics.py
src/models/: extra_features.py  extra_features_molecular.py  layers.py  transformer_model.py
